--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,12 @@ figcaption {
   color: #777;
   text-align: right
 }
+
+/* Class selector - as many elements as you want */
+
+.milk-text { /* select elements with class=milk-text */
+  font: bold 2.6em 'Elsie Swash Caps', cursive;
+  color: white
+  text-shadow: 0 2px 3px #000;
+  
+}
