--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,9 @@ figcaption {
   text-shadow: 0 2px 3px #000;
 
 }
+
+/* ID selector (apply to one unique element per page) */
+
+#logo {
+  background-color: aqua;
+}
