automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -29,3 +29,9 @@ figcaption {
 #logo {
   background-color: aqua;
 }
+
+/* Descendent Selector */
+
+#logo h1 {
+  font-family: 'Clicker Script', cursive;
+}
