--- a/css/style.css
+++ b/css/style.css
@@ -39,3 +39,21 @@ figcaption {
 #logo h2 {
   font-family: 'Elsie Swash Caps';
 }
+
+/* Psuedo Class Selector */
+
+#details a:link, #details a:visited {
+  color: black;
+  text-decoration: none;
+}
+
+#details a:hover {
+  color: black;
+  text-decoration: underline;
+}
+
+#details a:active {
+  color: red;
+  text-decoration: underline;
+}
+
